ASSERT when asking DisplayListRecorder for a platform context https://bugs.webkit.org/show_bug.cgi?id=278453 rdar://134401657

Reviewed by Abrar Rahman Protyasha.

* Source/WebCore/platform/graphics/displaylists/DisplayListRecorder.h:
Bug 278420 would have been much quicker to debug if we asserted when illegally
asking DisplayListRecorder for a platform context. So, do so!

* Source/WebCore/platform/mac/ScrollbarThemeMac.mm:
(WebCore::ScrollbarThemeMac::paint):
Instead of asking for a platform context to decide whether we can have one, ask if we can have one!

Canonical link: https://commits.webkit.org/282593@main